[gd_scene load_steps=18 format=3 uid="uid://r5dgbnxfrte"]

[ext_resource type="Script" uid="uid://ofwl0y23ruxe" path="res://script/patient.gd" id="1_7xcko"]
[ext_resource type="Texture2D" uid="uid://broq4qg2tv1w2" path="res://assets/textures/Bar/BG.png" id="2_obisw"]
[ext_resource type="Texture2D" uid="uid://6h6yokoceuls" path="res://assets/textures/Bar/S.png" id="3_4tmf4"]
[ext_resource type="Script" uid="uid://brdwrh64kl711" path="res://script/Healthbar.gd" id="4_gsi2l"]
[ext_resource type="PackedScene" uid="uid://dih1fpqnwl3pi" path="res://assets/Animation/wite.glb" id="5_7xcko"]
[ext_resource type="AnimationLibrary" uid="uid://douy4ss8jktjx" path="res://assets/Animation/IrengAnim.res" id="6_obisw"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_w6wah"]

[sub_resource type="ViewportTexture" id="ViewportTexture_eiev2"]
viewport_path = NodePath("HealthBar3D/HPViewport")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_b71q8"]
resource_local_to_scene = true
transparency = 1
shading_mode = 0
albedo_texture = SubResource("ViewportTexture_eiev2")

[sub_resource type="QuadMesh" id="QuadMesh_eiev2"]
resource_local_to_scene = true
material = SubResource("StandardMaterial3D_b71q8")
size = Vector2(0.8, 0.1)

[sub_resource type="BoxShape3D" id="BoxShape3D_mpypf"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_4tmf4"]
animation = &"IrengAnim/Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_gsi2l"]
animation = &"IrengAnim/Walk"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_cqndn"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_w7mh7"]
xfade_time = 0.5
advance_mode = 2
advance_condition = &"walk"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_j6val"]
xfade_time = 0.5
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_868md"]
states/IrengAnim_Idle/node = SubResource("AnimationNodeAnimation_4tmf4")
states/IrengAnim_Idle/position = Vector2(336, 100)
states/IrengAnim_Walk/node = SubResource("AnimationNodeAnimation_gsi2l")
states/IrengAnim_Walk/position = Vector2(572, 151)
transitions = ["Start", "IrengAnim_Idle", SubResource("AnimationNodeStateMachineTransition_cqndn"), "IrengAnim_Idle", "IrengAnim_Walk", SubResource("AnimationNodeStateMachineTransition_w7mh7"), "IrengAnim_Walk", "IrengAnim_Idle", SubResource("AnimationNodeStateMachineTransition_j6val")]

[node name="Pasien" type="CharacterBody3D" node_paths=PackedStringArray("body_mesh") groups=["pasien"]]
script = ExtResource("1_7xcko")
body_mesh = NodePath("wite/Armature/GeneralSkeleton/Ch22_Shirt")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_w6wah")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[node name="HPTimer" type="Timer" parent="."]

[node name="HealthBar3D" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.3, 0)

[node name="HPViewport" type="SubViewport" parent="HealthBar3D"]
transparent_bg = true
size = Vector2i(200, 40)

[node name="HealthBar" type="TextureProgressBar" parent="HealthBar3D/HPViewport"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
value = 50.0
nine_patch_stretch = true
texture_under = ExtResource("2_obisw")
texture_progress = ExtResource("3_4tmf4")
script = ExtResource("4_gsi2l")

[node name="HealthBarMesh" type="MeshInstance3D" parent="HealthBar3D"]
mesh = SubResource("QuadMesh_eiev2")

[node name="Sensor_Ambil" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Sensor_Ambil"]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0)
shape = SubResource("BoxShape3D_mpypf")

[node name="AnimationTree" type="AnimationTree" parent="." groups=["npc"]]
root_node = NodePath("../wite")
tree_root = SubResource("AnimationNodeStateMachine_868md")
anim_player = NodePath("../AnimationPlayer")
parameters/conditions/idle = false
parameters/conditions/walk = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../wite")
libraries = {
&"IrengAnim": ExtResource("6_obisw")
}

[node name="wite" parent="." instance=ExtResource("5_7xcko")]
transform = Transform3D(1.2, 0, 0, 0, 1.2, 0, 0, 0, 1.2, 0, 0, 0)

[node name="GeneralSkeleton" parent="wite/Armature" index="0"]
bones/0/position = Vector3(-0.0054788073, 0.99714714, 0.009082927)
bones/0/rotation = Quaternion(-0.032065567, -0.04753176, -0.024029274, 0.9980657)
bones/1/rotation = Quaternion(0.029172424, 0.0137617905, 0.022595389, 0.99922425)
bones/2/rotation = Quaternion(0.00999961, 0.003438992, 0.014162842, 0.99984384)
bones/3/rotation = Quaternion(0.009788701, 0.0036868877, 0.014072689, 0.9998463)
bones/4/rotation = Quaternion(0.04905823, -0.0014665731, 0.0045395656, 0.99878454)
bones/5/rotation = Quaternion(0.048987973, -0.0016932401, 0.0048811142, 0.9987861)
bones/7/rotation = Quaternion(0.45864835, 0.49927685, 0.6300932, -0.37861183)
bones/8/rotation = Quaternion(0.12683171, 0.8022352, -0.57023036, -0.12316589)
bones/9/rotation = Quaternion(0.009915181, -0.70703727, 0.009915304, 0.70703727)
bones/10/rotation = Quaternion(0.051959813, 0.47836387, -0.01426829, 0.8765071)
bones/11/rotation = Quaternion(-0.23049846, 0.68289214, 0.17170024, 0.6716009)
bones/12/rotation = Quaternion(0.2014951, 0.2038914, -0.05959144, 0.9561783)
bones/13/rotation = Quaternion(0.04001297, -0.05287604, -0.12858763, 0.9894788)
bones/15/rotation = Quaternion(0.06621669, 0.00073322654, 0.008431107, 0.9977694)
bones/16/rotation = Quaternion(0.15099774, -1.04308114e-07, -0.0154739, 0.98841304)
bones/17/rotation = Quaternion(0.070081994, 2.980233e-08, -0.007181855, 0.99751544)
bones/19/rotation = Quaternion(0.13653111, -0.003835931, -0.022952346, 0.9903624)
bones/20/rotation = Quaternion(0.15125473, -1.4901159e-08, -0.015500216, 0.9883733)
bones/21/rotation = Quaternion(0.15993266, -4.4703476e-08, -0.016389368, 0.9869919)
bones/23/rotation = Quaternion(0.18325107, -0.0046531702, -0.031455215, 0.98255175)
bones/24/rotation = Quaternion(0.18138775, 1.0430813e-07, -0.018588036, 0.98323596)
bones/25/rotation = Quaternion(0.15521291, 5.9604638e-08, -0.015905796, 0.987753)
bones/27/rotation = Quaternion(0.23386723, -0.0035054684, -0.049008727, 0.9710263)
bones/28/rotation = Quaternion(0.15125808, 8.940697e-08, -0.015500516, 0.9883728)
bones/29/rotation = Quaternion(0.14349759, 1.4901163e-08, -0.014705153, 0.9895415)
bones/31/rotation = Quaternion(0.47708437, -0.47756785, -0.6364696, -0.3731298)
bones/32/rotation = Quaternion(-0.14865226, 0.82788265, -0.49622768, 0.21510732)
bones/33/rotation = Quaternion(0.041281447, 0.7059007, -0.041281365, 0.70590085)
bones/34/rotation = Quaternion(0.04246944, -0.57126653, 0.035964303, 0.81887573)
bones/35/rotation = Quaternion(-0.24051964, -0.67192996, -0.18474679, 0.6756693)
bones/36/rotation = Quaternion(0.23822717, -0.20985533, 0.05118336, 0.9468838)
bones/37/rotation = Quaternion(0.045545176, 0.046079442, 0.1616931, 0.984712)
bones/39/rotation = Quaternion(0.059512988, -0.0009913296, -0.010975778, 0.99816674)
bones/40/rotation = Quaternion(0.15128769, -4.4703484e-08, 0.012324154, 0.98841304)
bones/41/rotation = Quaternion(0.07021637, 2.086162e-07, 0.0057199285, 0.9975154)
bones/43/rotation = Quaternion(0.13051493, 0.0036899294, 0.018922238, 0.99125886)
bones/44/rotation = Quaternion(0.15154496, -1.0430814e-07, 0.0123452265, 0.98837334)
bones/45/rotation = Quaternion(0.16023935, 1.937151e-07, 0.013053447, 0.98699194)
bones/47/rotation = Quaternion(0.17745194, 0.004501656, 0.026459042, 0.9837635)
bones/48/rotation = Quaternion(0.18173559, 2.9802319e-08, 0.01480457, 0.98323596)
bones/49/rotation = Quaternion(0.15551038, 1.4901159e-08, 0.01266828, 0.98775303)
bones/51/rotation = Quaternion(0.22849339, 0.0034027696, 0.04298073, 0.97259027)
bones/52/rotation = Quaternion(0.15154792, -1.4901158e-08, 0.01234555, 0.9883728)
bones/53/rotation = Quaternion(0.14377266, 5.9604638e-08, 0.011712014, 0.9895415)
bones/55/rotation = Quaternion(0.13331635, 0.09786435, 0.9830451, -0.079193674)
bones/56/rotation = Quaternion(-0.03944665, 0.9927919, -0.11227059, 0.01427298)
bones/57/rotation = Quaternion(-0.044256058, 0.7249064, -0.68550164, 0.051377952)
bones/58/rotation = Quaternion(-9.6147495e-08, 0.9990753, 0.042996287, 7.507408e-08)
bones/60/rotation = Quaternion(-0.09205298, 0.004978136, 0.99545145, -0.02404002)
bones/61/rotation = Quaternion(0.033414725, 0.99438787, -0.055053595, -0.08393766)
bones/62/rotation = Quaternion(0.009415982, 0.69691145, -0.71670985, -0.023510834)
bones/63/rotation = Quaternion(-1.3704874e-08, 0.99813044, 0.061120883, -1.12350435e-07)

[connection signal="body_entered" from="Sensor_Ambil" to="." method="_on_sensor_ambil_body_entered"]
[connection signal="body_exited" from="Sensor_Ambil" to="." method="_on_sensor_ambil_body_exited"]

[editable path="wite"]
